# lcs-diff-rs

./: .gitignore  Cargo.toml  README.md  appveyor.yml
.circleci/: config.yml
benches/: benches.rs
examples/: example.rs
src/: lib.rs
