[package]
name = "lcs-diff"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
repository = "https://github.com/bokuweb/lcs-diff-rs"
keywords = ["diff", "lcs"]
license-file = "MIT"
readme = "README.md"
description = "Compute differences between two slices using LCS algorithm."

[dependencies]

[dev-dependencies]
pretty_assertions = "*"
